--- a/reqs/requirements.txt
+++ b/reqs/requirements.txt
@@ -4,18 +4,26 @@
 #
 #    pip-compile --output-file=reqs/requirements.txt reqs/requirements.in
 #
+alembic==1.13.1
+    # via -r reqs/requirements.in
 annotated-types==0.6.0
     # via pydantic
 anyio==4.3.0
     # via
     #   starlette
     #   watchfiles
+bcrypt==4.1.2
+    # via -r reqs/requirements.in
+cachetools==5.3.3
+    # via -r reqs/requirements.in
 click==8.1.7
     # via uvicorn
 colorama==0.4.6
     # via
     #   click
     #   uvicorn
+ecdsa==0.18.0
+    # via python-jose
 fastapi==0.110.0
     # via -r reqs/requirements.in
 greenlet==3.0.3
@@ -26,26 +34,51 @@ httptools==0.6.1
     # via uvicorn
 idna==3.6
     # via anyio
+mako==1.3.2
+    # via alembic
+markupsafe==2.1.5
+    # via mako
 mysqlclient==2.2.4
     # via -r reqs/requirements.in
+passlib==1.7.4
+    # via -r reqs/requirements.in
+pyasn1==0.6.0
+    # via
+    #   python-jose
+    #   rsa
 pydantic==2.6.4
-    # via fastapi
+    # via
+    #   fastapi
+    #   pydantic-settings
 pydantic-core==2.16.3
     # via pydantic
-pyjwt==2.8.0
+pydantic-settings==2.2.1
     # via -r reqs/requirements.in
 python-dotenv==1.0.1
-    # via uvicorn
+    # via
+    #   pydantic-settings
+    #   uvicorn
+python-jose==3.3.0
+    # via -r reqs/requirements.in
+python-multipart==0.0.9
+    # via -r reqs/requirements.in
 pyyaml==6.0.1
     # via uvicorn
+rsa==4.9
+    # via python-jose
+six==1.16.0
+    # via ecdsa
 sniffio==1.3.1
     # via anyio
 sqlalchemy==2.0.29
-    # via -r reqs/requirements.in
+    # via
+    #   -r reqs/requirements.in
+    #   alembic
 starlette==0.36.3
     # via fastapi
 typing-extensions==4.10.0
     # via
+    #   alembic
     #   fastapi
     #   pydantic
     #   pydantic-core
